cargo-features = ["profile-rustflags"]
[package]
name = "trader"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.6", features = ["json", "blocking", "rustls-tls"] }
url = "2.2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1.7"
dec = { path = "dec" }
logging = { path = "logging" }
lazy_static = "1.4.0"
enum-map = "2.0.0"
rustls = "0.20.2"
async-tungstenite = {version = "0.17.1", features = ["tokio-rustls-native-certs"]}
futures = "0.3"
tokio = { version = "1", features = ["full"] }
sha2 = "0.10.1"
hex-literal = "0.3.1"
hmac = "0.12.0"
envy = "0.4"
proc_macros= { path = "proc_macros"}
uuid = { version = "1.0.0", features = ["serde", "v4"] }
csv = "1.1"
thiserror = "1.0.30"
mimalloc = { version = "*", default-features = false }
crossbeam = { version = "0.8.1" }
crossbeam-channel = { version = "0.5.2" }
serde_urlencoded = "0.7"

# [target."cfg(debug_assertions)".dependencies]
# console_error_panic_hook = "0.1.5"